tests/semantic/fact_arity/fact_arity.err
Error: Mismatching arity of relation A in file fact_arity.dl at line 13
A("1").
^-------
Error: Mismatching arity of relation A in file fact_arity.dl at line 14
A("2","3").
^-----------
Error: Mismatching arity of relation B in file fact_arity.dl at line 18
B("3","4").
^-----------
Error: Mismatching arity of relation B in file fact_arity.dl at line 19
B("3","4","3").
^---------------
4 errors generated, evaluation aborted
